# intent-recognition-demo

./: .gitignore  README.md  pyproject.toml
intent/: __init__.py  config.py  data.py  demo.py  evaluate.py  model.py  predict.py  preprocess.py  snips.py  train.py
