[project]
name = "lstm-intent-recognition"
version = "0.1.0"
description = "Bidirectional LSTM + attention intent recognition demo for the lazy-ai-primer"
authors = [
    {name = "Walter Fan",email = "walter.fan@zoom.us"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch (>=2.1,<3.0)",
    "numpy (>=1.24,<2.0)",
    "scikit-learn (>=1.3)",
    "matplotlib (>=3.7)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
